tests/NormalTests/paczka1/small_fuzzy/45269870.err
Error in line 1: fuoYi A128 32,5
Error in line 2: fuoYi A811 9,8
Error in line 5: YV5 A128 80,2
Error in line 7: YV5 A811 92,3
Error in line 9: sQn8R6r A255 41,9
